// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListEditor tests  rendering full component as disabled 1`] = `
<div>
  <ListForm
    disabled={true}
    isValid={[Function]}
    locale={
      Object {
        "addButtonLabel": "Add",
        "inputFieldHint": "Please type the item name",
        "inputFieldLabel": "Item name",
      }
    }
    onAdd={[Function]}
  />
</div>
`;

exports[`ListEditor tests  rendering full component with a defined className 1`] = `
<div
  className="requiredField"
>
  <ListForm
    disabled={false}
    isValid={[Function]}
    locale={
      Object {
        "addButtonLabel": "Add",
        "inputFieldHint": "Please type the item name",
        "inputFieldLabel": "Item name",
      }
    }
    onAdd={[Function]}
  />
</div>
`;
